--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -4,8 +4,8 @@ description: Official documentation of the Reblocks Visual Code plugin.
 template: splash
 hero:
   tagline: Official documentation of the Reblocks Visual Code project.
-  image: 
-   file: ../../assets/reblocksv01.svg
+  image:
+    file: ../../assets/reblocksv01.svg
 
   actions:
     - text: Start Here
@@ -17,4 +17,4 @@ hero:
       variant: minimal
 ---
 
-import { LinkCard, Card, CardGrid } from '@astrojs/starlight/components';
+import { LinkCard, Card, CardGrid } from "@astrojs/starlight/components";
